@@ -1,3 +1,9 @@
+2008-12-30  Paolo Bonzini  <bonzini@gnu.org>
+
+	PR tree-optimization/38572
+	* tree-vrp.c (vrp_visit_phi_node): Look out for invalid ranges
+	and change them to VARYING.
+
 2008-12-30  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/38564
